# orchemist

./: .env.example  .gitignore  CHANGELOG.md  CLEANUP_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  PHASE1_USAGE.md  README.md  ROADMAP.md  SECURITY.md  acceptance_run_round3.md  acceptance_test.md  acceptance_test_round1.md  acceptance_test_round2.md  acceptance_test_round3.md  b30e8d08-25ee-477d-a031-fa3c7995bf87.md  behavioral.md  fix.md  implement_round1.md  implement_round2.md  inject_82_84.py  inject_85_86.py  inject_progress.py  input-102-parallel.json  input-188-output-parser.json  input-189-file-write.json  input-192-retry-feedback.json  input-231-data-model.json  input-239-pagination.json  input-240-241-poll-timeout.json  input-editorial-rewrite-full.json  input-editorial-rewrite.json  input-orchestration-article.json  input-research-competitive.json  issue-110-input.json  pyproject.toml  pytest.ini  review.md  review_round1.md  (+7 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release-signing-pubkey.asc
.github/ISSUE_TEMPLATE/: bug-report.md  cleanup-duplicate.md  content-request.md  doc-request.md  feature-request.md  harness-ui-screen.md  research-request.md
.github/workflows/: ci.yml  publish.yaml
community-templates/: index.yaml
docs/: ARCHITECTURE.md  CONFIG-SURFACE.md  CURRENT-STATE.md  GETTING_STARTED.md  RELEASE-SOP.md  api-reference.md  architecture.md  ci-investigation-23286850209.md  code-review-bugfixes.md  code-review-crud.md  code-review.md  confidence-scoring.md  database-schema.md  diagnosis-recovery.md  dialogue-harness-design.md  error-recovery.md  issue-automation.md  mcp-integration.md  mcp-setup.md  memory-system.md  metrics.md  monitoring.md  openclaw-gateway-api.md  openclaw-output-extraction-architecture.md  openrouter-setup.md  opus-review-output-capture.md  orchestra-templates.md  orchestration-engine-audit-v2.md  orchestration-engine-scenario-strategy.md  output-extraction-architecture-review.md  pipeline-chaining.md  quality-gates.md  rest-api-v1.md  structured-schemas.md  task-queue.md  tech-stack.md  template-authoring.md  troubleshooting.md  trust-calibration.md  tutorial.md  (+3 more)
docs/architecture/: 267-async-run.md
docs/design/: phase-transitions-191.md
docs/duplicate-sweep-2026-05-27/: CONSOLIDATED_DUPLICATES.md
docs/forensics_2026-03-13/: 05-license-metadata-inconsistencies.md  08-remediation-plan.md  09-post-remediation-advisory.md
docs/future/: README.md  mcp-integration.md  memory-system.md  metrics.md
docs/harness-redesign-2026-05-24/: AUTONOMY.md  DUPLICATES.md  FRONTEND.md  README.md  VISION.md
docs/internal/: README.md  dialogue-harness-design.md  level5-requirements.md  openclaw-output-extraction-architecture.md  opus-review-output-capture.md  orchestration-engine-audit-v2.md  orchestration-engine-scenario-strategy.md  output-extraction-architecture-review.md
docs/strategic-audit-2026-05-25/: COURSE_OF_ACTION.md  DUPLICATES_REFRESHED.md  OPEN_ISSUES.md  RISK_ASSESSMENT.md  VISION_GAP.md
examples/: _qa-cli04.yaml  code-development-pipeline.yaml  code-review-pipeline-v2.yaml  code-review-pipeline.yaml  coding-pipeline-fixture.yaml  content-pipeline-v2.yaml  content-pipeline-v3.yaml  docs-pipeline.yaml  hello-pipeline.yaml  linear-transitions.yaml  research-pipeline.yaml  security-audit-pipeline.yaml  spec-review-dialogue-fixture.yaml  ux-audit-pipeline.yaml
frontend/: jest.config.ts  jest.setup.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/components/: TopNav.tsx
frontend/hooks/: useStaticExportParam.ts
frontend/lib/: api.ts  constants.ts  demo-data.ts  phaseLabels.ts  sse.ts  timeFmt.ts  types.ts  (+1 more)
my-first-run/: apply_fixes.json  fact_check.json  final_output.json  research.json  write.json
reviews/: 190-code-review.md  194-code-review.md  244-code-review.md
scenario_runner/: README.md  __init__.py  models.py  runner.py
scenarios/: README.md  code-development-smoke.yaml  coding-pipeline-skip-spec-smoke.yaml  coding-pipeline-v1-smoke.yaml  docs-pipeline-smoke.yaml  e2e-autonomous.yaml  e2e-test-template.yaml  security-audit-smoke.yaml  sprint-runner-step-v1-smoke.yaml  sprint-runner-v1-smoke.yaml  ux-audit-smoke.yaml
scripts/: check_template_sync.py  check_workflow.py  extract_issue.py  register_webhook.py  wait_for_url.sh
templates/: CONTEXT_GUIDE.md  coding-pipeline-explore.yaml  coding-pipeline-maintenance.yaml  coding-pipeline-postmortem.yaml  coding-pipeline-skip-spec.yaml  coding-pipeline-standard.yaml  coding-pipeline-v1.yaml  coding-pipeline-v2.yaml  content-pipeline-gemini-v2.3.1.yaml  content-pipeline-v25.yaml  content-pipeline-v26.yaml  content-pipeline-v27.yaml  content-pipeline-v28.yaml  content-pipeline.yaml  docs-pipeline-v1.yaml  editorial-rewrite.yaml  greenfield-project-v1.yaml  hello-pipeline.yaml  research-competitive-v2.yaml  research-competitive.yaml  spec-review-dialogue.yaml  sprint-runner-step-v1.yaml  sprint-runner-v1.yaml
tests/: __init__.py  _helpers.py  conftest.py  test_acceptance_matrix_985.py  test_adaptive_retry.py  test_adaptive_retry_integration.py  test_adaptive_retry_strategies.py  test_admin_audit_log.py  test_admin_prune_test_runs.py  test_adversary_parser.py  test_anthropic_executor.py  test_apply_config_schema_defaults.py  test_audit.py  test_auto_retry_backoff.py  test_behavioral_validation_e2e.py  test_budget_enforcement.py  test_canonical_fixtures.py  test_chain_config.py  test_chain_dag.py  test_chain_execution.py  test_chain_monitor.py  test_check_template_sync.py  test_ci_event_handler.py  test_claudecode_executor.py  test_cli_batch1.py  test_cli_batch2.py  test_cli_batch3.py  test_cli_batch4.py  test_cli_input_validation.py  test_cli_launch_shorthand.py  test_cli_overwrite.py  test_cli_scaffold.py  test_cli_watch.py  test_command_executor.py  test_command_security.py  test_concurrency.py  test_conditional_output_capture.py  test_confidence.py  test_confidence_calibration.py  test_config.py  (+170 more)
(+277 files in other folders)
