[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestration-engine"
version = "0.1.0"
description = "Local orchestration engine for AI agent coordination — task queue, retry logic, quality gates, orchestra templates"
authors = [
    {name = "Toscan Rivera", email = "toscan@example.com"},
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "toml>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[project.scripts]
orch = "orchestration_engine.cli:main"

[project.urls]
Homepage = "https://github.com/ToscanRivera/orchestration-engine"
Repository = "https://github.com/ToscanRivera/orchestration-engine"
Documentation = "https://github.com/ToscanRivera/orchestration-engine/docs"
Issues = "https://github.com/ToscanRivera/orchestration-engine/issues"

[tool.hatch.version]
path = "src/orchestration_engine/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/orchestration_engine"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false