[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestration-engine"
version = "0.3.0"
description = "A scenario-driven orchestration engine for multi-agent AI pipelines"
authors = [
    {name = "Conny Lazo", email = "contact@renerivera.net"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "toml>=0.10.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
    "httpx>=0.24.0",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "sse-starlette>=1.0.0",
    # Note: the Next.js frontend (Issue #276) requires Node.js and npm.
    # Install JS dependencies with: cd frontend && npm install
    # Build the frontend with:      orch frontend build
]

[project.scripts]
orch = "orchestration_engine.cli:main"

[project.urls]
Homepage = "https://github.com/connylazo/orchestration-engine"
Repository = "https://github.com/connylazo/orchestration-engine"
Issues = "https://github.com/connylazo/orchestration-engine/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestration_engine"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
