[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchemist"
version = "0.13.1"
description = "Orchemist — a scenario-driven orchestration engine for multi-agent AI pipelines"
authors = [
    {name = "Conny Lazo", email = "contact@renerivera.net"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0.0,<8.3",
    "tomli>=2.0.0; python_version < \"3.11\"",
    "rich>=13.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "ruff>=0.8.0",
    "mypy",
    "httpx>=0.24.0",
    "PyJWT[cryptography]>=2.8.0",
    "tomli-w>=1.0.0",
    "orchemist[mcp]",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "sse-starlette>=1.0.0",
]
github = [
    "PyJWT[cryptography]>=2.8.0",
]

[project.scripts]
orch = "orchestration_engine.cli:main"

[project.urls]
Homepage = "https://github.com/ToscanAI/orchestration-engine"
Repository = "https://github.com/ToscanAI/orchestration-engine"
Development = "https://github.com/ToscanAI/orchestration-engine"
Issues = "https://github.com/ToscanAI/orchestration-engine/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestration_engine"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "BLE", "A", "C90", "PLC", "ARG", "PERF"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
